# SWallpaper

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
src/: FileManager.cpp  FileManager.h  WallpaperManager.cpp  WallpaperManager.h  main.cpp
src/display/: ImlibWallpaperDisplay.cpp  ImlibWallpaperDisplay.h  WallpaperDisplay.h  XWallpaperDisplay.cpp  XWallpaperDisplay.h
src/display/X11/: XWallpaperDisplay.cpp  XWallpaperDisplay.h
src/factory/: Factory.h  ImlibFactory.cpp  ImlibFactory.h
src/factory/X11/: XFactory.cpp  XFactory.h
src/manager/: WallpaperManager.cpp  WallpaperManager.h
src/wallpaper/: ImlibWallpaperImage.cpp  ImlibWallpaperImage.h  WallpaperImage.h
src/wallpaper/X11/: XWallpaperImage.cpp  XWallpaperImage.h
test/: SampleTest.cpp
